# rust-auth-api

./: Cargo.toml  docker-compose.yml
src/: main.rs
src/application/: mod.rs
src/application/services/: password_hasher.rs
src/config/: database.rs  env.rs  mod.rs  state.rs
src/config/env/: database.rs  mod.rs  server.rs
src/domain/: mod.rs
src/domain/constants/: email.rs  mod.rs  password.rs
src/domain/entities/: user.rs
src/domain/errors/: mod.rs
src/domain/value_objects/: email.rs  password.rs
src/handlers/: app.rs  user.rs
src/infrastructure/: mod.rs
src/infrastructure/database/postgres/: mod.rs  postgres_database.rs
src/infrastructure/database/postgres/dtos/: user.rs
src/infrastructure/http/axum/: mod.rs  server.rs
src/infrastructure/http/axum/handlers/: user.rs
src/infrastructure/http/axum/routes/: app.rs  mod.rs  user.rs
src/infrastructure/services/password_hasher/: argon2.rs
src/models/: user.rs
src/routes/: app.rs  mod.rs  user.rs
