[package]
name = "auth-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.8.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
dotenvy = "0.15.7"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11.2"
thiserror = "2.0.16"
once_cell = "1.21.3"
argon2 = { version = "0.5.3", features = ["std"] }
